Clean up streams in UpdateMarkers